# behlul

./: CMakeLists.txt  README.md  binds.cpp  main.cpp  state_farm_cnn.ipynb
data/: state_conv1.out  state_conv2.out  state_dense.out
docs/: Doxyfile
docs/html/: README_8md.html  annotated.html  autotoc_md0.html  binds_8cpp.html  binds_8cpp__incl.dot  binds_8cpp__incl.md5  binds_8cpp_aee6f4df5c754f3230102a2a376deee7d_cgraph.dot  binds_8cpp_aee6f4df5c754f3230102a2a376deee7d_cgraph.md5  binds_8cpp_source.html  classConv__Layer-members.html  classConv__Layer.html  classConv__Layer__coll__graph.dot  classConv__Layer__coll__graph.md5  classConv__Layer_a890e82fe22c8acf748934aa0c4a021b6_cgraph.dot  classConv__Layer_a890e82fe22c8acf748934aa0c4a021b6_cgraph.md5  classCross__Entropy-members.html  classCross__Entropy.html  classCross__Entropy__coll__graph.dot  classCross__Entropy__coll__graph.md5  classDense__Layer-members.html  classDense__Layer.html  classDense__Layer__coll__graph.dot  classDense__Layer__coll__graph.md5  classDense__Layer_afd57c1d1e6d1bdeb61627c0d68757323_cgraph.dot  classDense__Layer_afd57c1d1e6d1bdeb61627c0d68757323_cgraph.md5  classMax__Pool-members.html  classMax__Pool.html  classMax__Pool__coll__graph.dot  classMax__Pool__coll__graph.md5  classReLU-members.html  (+93 more)
layers/: conv_layer.cpp  conv_layer.hpp  cross_entropy.hpp  dense_layer.cpp  dense_layer.hpp  max_pool.cpp  max_pool.hpp  relu.cpp  relu.hpp  softmax.hpp
test/: test_conv_layer.cpp  test_cross_entropy.cpp  test_dense_layer.cpp  test_max_pool.cpp  test_relu.cpp  test_softmax.cpp
utils/: mnist.hpp
(+44 files in other folders)
